[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/PercentBar.gd" type="Script" id=1]

[node name="PercentBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -120.0
margin_bottom = -220.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
percent = 0.7

[node name="OutlineRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EmptyColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FillColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -79.6
margin_bottom = -1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="resized" from="." to="." method="_on_PercentBar_resized"]
